--- a/metadata.yaml
+++ b/metadata.yaml
@@ -32,5 +32,6 @@ subjects:
 - !lcsh 'Cooking -- Periodicals'
 - !lcc 'AP'
 - !lcc 'TX'
+- GITenberg
 title: The Boston Cooking-School Magazine (Vol. XV, No. 2, Aug.-Sept., 1910)
 url: http://www.gutenberg.org/ebooks/41940
